--- a/.github/workflows/create_runner.yml
+++ b/.github/workflows/create_runner.yml
@@ -8,14 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: Create self-hosted runner
-        uses: actions/runner-registration@v2
+      - name: Azure login
+        uses: azure/login@v1
         with:
-          name: ${{ github.repository }}-self-hosted-runner
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          labels: self-hosted, label-beauty-az-cli
-          runnergroup: ${{ github.repository }}-self-hosted-runner-group
-          workdir: _work
-          replace: true
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+
