--- a/.github/workflows/create_runner.yml
+++ b/.github/workflows/create_runner.yml
@@ -13,4 +13,10 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Set Subscription
+        run: |
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    
+
 
