--- a/.github/workflows/create_runner.yml
+++ b/.github/workflows/create_runner.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
 
-  build:
+  create_runner_vm:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,7 +33,6 @@ jobs:
             --image Ubuntu2204 \
             --admin-username pierrc \
             --admin-password Password123$ \
-            --custom-data ./az_cli/gh.sh \
             --size Standard_B1s \
             --public-ip-address-dns-name runner00
 
