--- a/.github/workflows/create_runner.yml
+++ b/.github/workflows/create_runner.yml
@@ -32,5 +32,6 @@ jobs:
             --name runner \
             --image Ubuntu2204 \
             --admin-username pierrc \
+            --admin-password Password123$ \
             --size Standard_B1s \
             --public-ip-address-dns-name runner00
