--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,5 +8,6 @@ jobs:
 
     steps:
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Installation Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
