--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,5 +8,7 @@ jobs:
 
     steps:
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: login azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
